<resources>
    <string name="app_name">personal_note</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="welcomeApp">Welcome to Note</string>
    <string name="Change">Change Your Password</string>
    <string name="CurrentPassword">Enter current password</string>
    <string name="NewPassword">Enter new password</string>
    <string name="Confirm">Enter again password</string>
    <string name="btnChange">Change</string>
    <string name="btnHome">Home</string>
    <string name="SignUp">Sign Up</string>
    <string name="EnterEmail">Enter your email</string>
    <string name="EnterPassword">Enter your password (more than 8 words)</string>
    <string name="ConfirmPassword">Confirm Your Password</string>
    <string name="SignIn">Sign In</string>
    <string name="FirstName">First Name</string>
    <string name="LastName">Last Name</string>
    <string name="AddStatus">ADD STATUS</string>
    <string name="Name">Name</string>
    <string name="Back">Back</string>
    <string name="Close">Close</string>
    <string name="Add">Add</string>
    <string name="EnterYourLastName">  Enter Your Last Name</string>
    <string name="EnterYourFirstName"> Enter Your First Name</string>
    <string name="EditProfile"> Edit Profile</string>
    <string name="Edit"> Edit Profile</string>
    <string name="Info"> Account Infomation </string>
    <string name="Email"> Email </string>
    <string name="FullName"> FullName </string>
    <string name="Note">Note</string>
    <string name="Priority">Priority</string>
    <string name="Status">Status</string>
    <string name="Category">Category</string>
</resources>