<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.AccountFragment"
    android:gravity="center"
    android:layout_margin="10dp"
    android:orientation="vertical">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/Info"
        android:text="@string/Info"
        android:textSize="30dp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <TextView
        android:id="@+id/mail"
        android:layout_width="355dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:paddingLeft="20dp"
        android:text="@string/Email"
        android:textSize="25dp" />

    <TextView
        android:id="@+id/Email"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/edittext_background"
        android:paddingLeft="20dp"
        android:textSize="25dp"
        />

    <TextView
        android:id="@+id/fullName"
        android:layout_width="352dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:paddingLeft="20dp"
        android:text="@string/FullName"
        android:textSize="25dp" />
    <TextView
        android:id="@+id/HoTen"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="45dp"
        android:background="@drawable/edittext_background"
        android:paddingLeft="20dp"
        android:textSize="25dp"
        />

    <LinearLayout
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content">


    </LinearLayout>

    <android.widget.Button
        android:id="@+id/btnHome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_background"
        android:text="@string/btnHome" />

</LinearLayout>