<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/editbanner"
        android:gravity="center"
        android:textSize="50dp"
        android:text="@string/SignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <EditText
        android:id="@+id/edittextuser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/EnterEmail"
        android:inputType="textEmailAddress"
        android:layout_below="@+id/editbanner"
        app:hintEnabled="true"
        />
    <EditText
        android:id="@+id/edittextpassword"
        android:layout_width="match_parent"
        app:hintEnabled="true"
        android:layout_height="wrap_content"
        android:hint="Nhập password từ 6 ký tự trở lên"
        android:layout_below="@id/edittextuser"
        android:password="true"

        />
    <EditText
        android:id="@+id/edittextconfirmpassword"
        android:layout_width="match_parent"
        app:hintEnabled="true"
        android:layout_height="wrap_content"
        android:hint="Nhập lại mật khẩu"
        android:layout_below="@id/edittextpassword"
        android:password="true"


        />
    <CheckBox
        android:id="@+id/bntremember"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Remember Me"
        android:layout_below="@id/edittextconfirmpassword"
        />
    <LinearLayout
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/bntsignup"
            android:backgroundTint="@color/yellow"
            android:layout_below="@id/bntremember"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SignUp"

            />

        <Button
            android:id="@+id/bntsignin"
            android:backgroundTint="@color/yellow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="@string/SignIn"
            android:layout_marginLeft="180dp"
            />
    </LinearLayout>

</LinearLayout>